Fix body heights and alignment issues for devise pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
 // Global rules
 html {
   position:relative;
-  min-height: 100%;
+  min-height: calc(100% - 150px);
 }
 html, body {
   background-color: $white;
