--- a/app/assets/stylesheets/pages/_lines.scss
+++ b/app/assets/stylesheets/pages/_lines.scss
@@ -7,6 +7,7 @@
   color: $white;
   font-family: $header-font;
   padding: 0;
+  margin-bottom: 78px;
 }
 #map {
   border-radius: 4px;
